# battle-node

./: .gitignore  CMakeLists.txt  README.md  index.html
demo/: demo_script.cpp
include/common/: Logger.h  ThreadSafeQueue.h  Types.h
include/fusion/: EntityTracker.h  FusionEngine.h  KalmanFilter.h
include/output/: CLIVisualizer.h  OutputInterface.h  WebSocketServer.h
include/sensors/: SensorData.h  SensorInterface.h  SyntheticSensorGenerator.h
include/system/: SensorFusionSystem.h
src/: main.cpp
src/common/: Logger.cpp
src/fusion/: EntityTracker.cpp  FusionEngine.cpp  KalmanFilter.cpp
src/output/: CLIVisualizer.cpp  WebSocketServer.cpp
src/sensors/: SensorData.cpp  SyntheticSensorGenerator.cpp
src/system/: SensorFusionSystem.cpp
